update user booking response